--- a/index.html
+++ b/index.html
@@ -5,31 +5,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./css/style.min.css">
   
   <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
+  <section class="container">
+    <div class="card">
+      <div class="card-bg-pattern-box">
+        <img src="./images/image-victor.jpg" alt="Victor">
+      </div>
+      <div class="content-box">
+        <h2>Victor Crest <span>26</span></h2>
+        <h3>London</h3>
+        <div class="stats-box">
+          <div class="stat">
+            <h2>80K</h2>
+            <p>Followers</p>
+          </div>
+          <div class="stat">
+            <h2>803K</h2>
+            <p>Likes</p>
+          </div>
+          <div class="stat">
+            <h2>1.4K</h2>
+            <p>Photos</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  80K
-  Followers
+  <div class="top-pattern">
+    <img src="./images/bg-pattern-top.svg" alt="background pattern top" class="svg-top">
+  </div>
+  <div class="bottom-pattern">
+    <img src="./images/bg-pattern-bottom.svg" alt="background pattern bottom" class="svg-bottom">
+  </div>
+  <!-- <svg width="978" height="978" xmlns="http://www.w3.org/2000/svg" class="svg-top"><defs><linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="a"><stop stop-color="#0989B4" stop-opacity="0" offset="0%"/><stop stop-color="#53FFEE" offset="99.94%"/></linearGradient></defs><ellipse fill="url(#a)" transform="rotate(-135 489 489)" cx="489" cy="489" rx="489" ry="488" fill-rule="evenodd" opacity=".5"/></svg>
 
-  803K
-  Likes
+  <svg width="978" height="978" xmlns="http://www.w3.org/2000/svg" class="svg-bottom"><defs><linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="a"><stop stop-color="#0989B4" stop-opacity="0" offset="0%"/><stop stop-color="#53FFEE" offset="99.94%"/></linearGradient></defs><ellipse fill="url(#a)" transform="scale(1 -1) rotate(45 1669.55 0)" cx="489" cy="489" rx="489" ry="488" fill-rule="evenodd" opacity=".25"/></svg> -->
 
-  1.4K
-  Photos
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/SasaVatic">Sasa Vatic</a>.
   </div>
 </body>
 </html>
